# qt6.5_musicplayer

./: Banner.qml  Bottom.qml  BottomView.qml  CMakeLists.txt  DetailHistoryPageView.qml  DetailListPageView.qml  DetailLocationPageView.qml  DetailLovePageView.qml  DetailRecommendPageView.qml  HomeView.qml  Left.qml  Main.qml  README.md  RadiusImage.qml  Top.qml  TopView.qml  image.qrc  images.qrc  main.cpp
